@@ -6,7 +6,7 @@
 .\" Public License for copying conditions.  There is NO warranty.
 .\"
 .\" $Id$
-.TH NANORC 5 "version 1.3.8" "June 8, 2005"
+.TH NANORC 5 "version 1.3.8" "June 15, 2005"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .SH NAME
@@ -142,6 +142,9 @@ Allow nano to be suspended.
 \fBset tabsize \fIn\fP\fP
 Use a tab size of \fIn\fP columns instead of the default (8); must be
 greater than 0.
+.TP
+\fBset/unset tabstospaces\fP
+Convert typed tabs to spaces.
 .TP
 \fBset/unset tempfile\fP
 Save automatically on exit, don't prompt.
