@@ -9,7 +9,7 @@
 @smallbook
 @set EDITION 0.1
 @set VERSION 1.3.8
-@set UPDATED 03 Jun 2005
+@set UPDATED 15 Jun 2005
 
 @dircategory Editors
 @direntry
@@ -124,9 +124,12 @@ line.
 When saving a file, back up the previous version of it to the current
 filename suffixed with a ~.
 
-@item -E, --backupdir=[dir]
+@item -C, --backupdir=[dir]
 Set the directory where @code{nano} puts unique backup files if file
 backups are enabled.
+
+@item -E, --tabstospaces
+Convert typed tabs to spaces.
 
 @item -F, --multibuffer
 Enable multiple file buffers, if available.
